--- a/testApp/Makefile
+++ b/testApp/Makefile
@@ -13,6 +13,11 @@ TESTPROD_HOST += testValues
 testValues_SRCS += testValues.cpp
 TESTS += testValues
 
+
+PROD_LIBS += pscCore
+PROD_LIBS += $(EPICS_BASE_IOC_LIBS)
+PROD_SYS_LIBS += event_core event_extra
+PROD_SYS_LIBS_Linux += event_pthreads
 TESTSCRIPTS_HOST += $(TESTS:%=%.t)
 
 #===========================
