add optional autosave

--- a/demoApp/src/Makefile
+++ b/demoApp/src/Makefile
@@ -14,17 +14,22 @@ DBD += pscdemo.dbd
 
 # demo.dbd will be made up from these files:
 pscdemo_DBD += base.dbd
+pscdemo_DBD += system.dbd
 pscdemo_DBD += pscCore.dbd
+
 ifdef EPICS_QSRV_MAJOR_VERSION
 pscdemo_DBD += PVAServerRegister.dbd
 pscdemo_DBD += qsrv.dbd
-endif
-
-pscdemo_LIBS += pscCore
-ifdef EPICS_QSRV_MAJOR_VERSION
 pscdemo_LIBS += qsrv
 pscdemo_LIBS += $(EPICS_BASE_PVA_CORE_LIBS)
 endif
+
+ifdef AUTOSAVE
+pscdemo_DBD += asSupport.dbd
+pscdemo_LIBS += autosave
+endif
+
+pscdemo_LIBS += pscCore
 
 # pscdemo_registerRecordDeviceDriver.cpp derives from pscdemo.dbd
 pscdemo_SRCS += pscdemo_registerRecordDeviceDriver.cpp
