--- a/demoApp/src/Makefile
+++ b/demoApp/src/Makefile
@@ -16,6 +16,7 @@ DBD += pscdemo.dbd
 pscdemo_DBD += base.dbd
 pscdemo_DBD += system.dbd
 pscdemo_DBD += pscCore.dbd
+pscdemo_DBD += pscudp.dbd
 
 ifdef EPICS_QSRV_MAJOR_VERSION
 pscdemo_DBD += PVAServerRegister.dbd
@@ -29,6 +30,7 @@ pscdemo_DBD += asSupport.dbd
 pscdemo_LIBS += autosave
 endif
 
+pscdemo_LIBS += pscudp
 pscdemo_LIBS += pscCore
 
 # pscdemo_registerRecordDeviceDriver.cpp derives from pscdemo.dbd
