--- a/sigApp/src/Makefile
+++ b/sigApp/src/Makefile
@@ -13,6 +13,8 @@ DBD += pscSig.dbd
 
 pscSig_SRCS += asubwf.c
 
+pscSig_LIBS += $(EPICS_BASE_IOC_LIBS)
+
 ifeq ($(USE_FFTW),YES)
 
 pscSig_SRCS += fftwrap.cpp
